...
        let avatar = UIImageView()
        avatar.backgroundColor = .systemGray
        avatar.layer.cornerRadius = 20
        avatar.clipsToBounds = true
        avatar.widthAnchor.constraint(equalToConstant: 40).isActive = true
        avatar.heightAnchor.constraint(equalToConstant: 40).isActive = true
        avatar.image = UIImage(systemName: "person.crop.circle.fill")
        avatar.tintColor = .white
        
        let vStack = UIStackView()
        vStack.axis = .vertical
        let name = UILabel()
        name.text = "Tunde Lasisi"
...
