...
    
    let textField: UITextField = {
        let field = UITextField()
        field.isSecureTextEntry = true
        field.textColor = .white
        field.font = .systemFont(ofSize: 16)
        field.attributedPlaceholder = NSAttributedString(string: "********", attributes: [.foregroundColor: UIColor.lightGray])
        field.translatesAutoresizingMaskIntoConstraints = false
        return field
    }()
    
    let toggleEyeButton: UIButton = {
        let button = UIButton(type: .system)
...
