...
    
    let textField: UITextField = {
        let field = UITextField()
        field.keyboardType = .phonePad
        field.textColor = .white
        field.font = .systemFont(ofSize: 16)
        field.attributedPlaceholder = NSAttributedString(string: "802 123 4567", attributes: [.foregroundColor: UIColor.lightGray])
        field.translatesAutoresizingMaskIntoConstraints = false
        return field
    }()
    
    private let flagLabel: UILabel = {
        let label = UILabel()
...
